--- a/index.ipynb
+++ b/index.ipynb
@@ -271,7 +271,13 @@
       "LogisticRegression(C=1000000000000.0, class_weight='balanced', dual=False,\n",
       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
-      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n"
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for Balanced: 0.8320950632779984\n",
+      "LogisticRegression(C=1000000000000.0, class_weight={1: 2, 0: 1}, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 2 to 1: 0.5602686365738339\n"
      ]
     }
    ],
