Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -413,7 +413,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 0.1: 0.7184046488802484\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:758: ConvergenceWarning: lbfgs failed to converge. Increase the number of iterations.\n",
+      "  \"of iterations.\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 0.25: 0.7648285690018025\n"
+     ]
+    }
+   ],
    "source": [
     "# Now let's compare a few different ratios of minority class to majority class\n",
     "ratios = [0.1,0.25, 0.33, 0.5,0.7,1]\n",
