--- a/index.ipynb
+++ b/index.ipynb
@@ -441,7 +441,17 @@
       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
       "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
-      "AUC for 0.25: 0.7648285690018025\n"
+      "AUC for 0.25: 0.7648285690018025\n",
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 0.33: 0.781992903049235\n",
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 0.5: 0.8040493672200149\n"
      ]
     }
    ],
