--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,12 @@
       "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
       "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
-      "AUC for 0.5: 0.8040493672200149\n"
+      "AUC for 0.5: 0.8040493672200149\n",
+      "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
+      "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
+      "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+      "          solver='lbfgs', tol=0.0001, verbose=0, warm_start=False)\n",
+      "AUC for 0.7: 0.8189451779428281\n"
      ]
     }
    ],
